--- a/app/src/main/res/layout/add_medicine_dialog.xml
+++ b/app/src/main/res/layout/add_medicine_dialog.xml
@@ -53,21 +53,14 @@
             android:textColor="@android:color/black"
             />
 
-        <LinearLayout
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/stroke_rect_gray"
-            android:orientation="horizontal"
-            android:padding="0dp">
-
-            <Spinner
-                android:id="@+id/spinnerVerities"
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-            </Spinner>
-        </LinearLayout>
+            android:layout_height="50dp"
+            android:padding="10dp"
+            android:id="@+id/ed_varities"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
     </LinearLayout>
 
 
