--- a/app/src/main/res/layout/activity_all_specialist.xml
+++ b/app/src/main/res/layout/activity_all_specialist.xml
@@ -56,7 +56,7 @@
     <com.bartoszlipinski.flippablestackview.FlippableStackView
         android:id="@+id/flippable_stack_view"
         android:layout_width="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_marginBottom="50dp"
         android:layout_below="@id/appbar"
         android:layout_height="match_parent"
@@ -65,11 +65,11 @@
         android:layout_width="match_parent"
         android:id="@+id/recycler_view"
         android:layout_below="@id/appbar"
-        android:layout_marginBottom="50dp"
 
         android:layout_height="wrap_content"/>
     <LinearLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:layout_height="50dp">
         <TextView
