--- a/app/src/main/res/layout/activity_product_body_detail.xml
+++ b/app/src/main/res/layout/activity_product_body_detail.xml
@@ -35,12 +35,42 @@
                 android:textSize="18dp" />
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="15dp"
+        android:background="@drawable/shadow_log_only_bottom"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/category"
+            android:text="Main Category"
+            android:layout_gravity="center_vertical"
 
+            android:textColor="#3F51B5"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:layout_marginLeft="10dp"
+            android:layout_width="12dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/right_white"
+            android:layout_height="12dp"
+            app:tint="#cccccc" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/subcategory"
+            android:text="Sub  Category"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+
+            android:textColor="#3F51B5"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        >
 
 
         <ImageView
@@ -49,19 +79,30 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:gravity="center" />
-
-        <TextView
-            android:id="@+id/tv_name2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:background="@drawable/shadow_low_lft_right"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_name2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
 
-            android:layout_gravity="center"
-            android:textSize="18dp" />
+                android:layout_gravity="center"
+                android:textSize="18dp" />
+        </LinearLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="10dp"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -106,6 +147,14 @@
                     android:layout_height="wrap_content"/>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/tv_description"
+            android:padding="10dp"
+            android:layout_height="wrap_content"/>
+
+
 
     </LinearLayout>
 </LinearLayout>
