--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -154,16 +154,7 @@
                             android:background="#D84315" />
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="10dp"
-                        android:layout_marginTop="15dp"
-                        android:onClick="forgotePassword"
-                        android:text="Forgot password?"
-                        android:textColor="@color/black"
-                        android:textSize="12dp"/>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -194,7 +185,16 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:layout_marginTop="15dp"
+                android:onClick="forgotePassword"
+                android:text="Forgot password?"
+                android:textColor="@color/white"
+                android:textSize="12dp"/>
 
         </LinearLayout>
 
