--- a/app/src/main/res/layout/activity_home_dr.xml
+++ b/app/src/main/res/layout/activity_home_dr.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
+    tools:openDrawer="start"
 
     tools:context=".Activity.HomeActivityDrActivity">
     <RelativeLayout
@@ -34,13 +35,14 @@
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp">
 
-                <com.telemedicine.maulaji.Utils.CustomDrawerButton
+                <ImageView
                     android:id="@+id/customDrawer"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
                     android:layout_centerVertical="true"
                     android:padding="2dp"
-                    android:src="@drawable/menu_white"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/logout"
                     android:tint="@android:color/white" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -125,82 +127,82 @@
 
     </androidx.viewpager.widget.ViewPager>
     </RelativeLayout>
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true">
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--        android:id="@+id/nav_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="start"-->
+<!--        android:fitsSystemWindows="true">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:paddingTop="30dp"
-                android:paddingBottom="30dp"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@android:color/white"-->
+<!--            android:orientation="vertical">-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:background="@color/colorPrimary"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:gravity="center"-->
+<!--                android:paddingTop="30dp"-->
+<!--                android:paddingBottom="30dp"-->
+<!--                android:layout_height="wrap_content">-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:orientation="horizontal">-->
 
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:elevation="10dp"
-                        android:src="@drawable/appiconcg"
-                        />
+<!--                    <ImageView-->
+<!--                        android:layout_width="60dp"-->
+<!--                        android:layout_height="60dp"-->
+<!--                        android:elevation="10dp"-->
+<!--                        android:src="@drawable/doctor_banner"-->
+<!--                        />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="10dp"
-                        android:text="@string/app_name"
-                        android:textColor="@color/white"
-                        android:textSize="25dp" />
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:layout_marginLeft="10dp"-->
+<!--                        android:text="@string/app_name"-->
+<!--                        android:textColor="@color/white"-->
+<!--                        android:textSize="25dp" />-->
+<!--                </LinearLayout>-->
 
-            </LinearLayout>
-
-
+<!--            </LinearLayout>-->
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="logout"
-                android:orientation="horizontal"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp">
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/exit_"
-                    android:tint="@color/colorPrimary" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:text="Logout"
-                    android:textColor="@color/colorPrimary" />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
 
-    </com.google.android.material.navigation.NavigationView>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:onClick="logout"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:paddingTop="8dp"-->
+<!--                android:paddingBottom="8dp">-->
+
+<!--                <ImageView-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:layout_marginLeft="20dp"-->
+<!--                    android:src="@drawable/exit_"-->
+<!--                    android:tint="@color/colorPrimary" />-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:layout_marginLeft="20dp"-->
+<!--                    android:text="Logout"-->
+<!--                    android:textColor="@color/colorPrimary" />-->
+
+<!--            </LinearLayout>-->
+
+<!--        </LinearLayout>-->
+
+
+<!--    </com.google.android.material.navigation.NavigationView>-->
 </androidx.drawerlayout.widget.DrawerLayout>
