--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:src="@drawable/nurse"
-        android:layout_marginTop="130dp"
         android:scaleType="centerCrop"
         android:layout_height="match_parent">
 
@@ -17,7 +16,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         android:paddingTop="10dp"
         android:background="@android:color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -39,11 +38,30 @@
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 
 
-
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="100dp"
+    app:cardCornerRadius="0dp"
+    android:onClick="openLogin"
+    app:cardBackgroundColor="@color/colorPrimary"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Login"
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"/>
+</androidx.cardview.widget.CardView>
 
 </RelativeLayout>
