--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -13,11 +13,12 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="match_parent">
-            <com.telemedicine.maulaji.Utils.CustomDrawerButton
+            <ImageView
                 android:layout_width="60dp"
-                android:src="@drawable/menu"
+                android:src="@drawable/home_gray"
                 app:tint="@android:color/white"
                 android:padding="20dp"
+                android:onClick="back"
                 android:layout_height="60dp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -28,10 +29,11 @@
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:layout_height="wrap_content"/>
-            <com.telemedicine.maulaji.Utils.CustomDrawerButton
+            <ImageView
                 android:layout_width="60dp"
                 android:src="@drawable/cart"
                 app:tint="@android:color/white"
+                android:onClick="openCart"
 
                 android:layout_alignParentRight="true"
                 android:padding="20dp"
@@ -51,6 +53,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:onClick="openSearch"
         android:background="@color/colorPrimary"
         android:layout_height="100dp">
         <androidx.cardview.widget.CardView
