--- a/app/src/main/res/layout/appointment_item_patient_with_control.xml
+++ b/app/src/main/res/layout/appointment_item_patient_with_control.xml
@@ -28,7 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_marginRight="80dp"
+            android:layout_marginRight="130dp"
             android:layout_marginLeft="15dp"
             android:layout_height="wrap_content">
             <TextView
@@ -86,23 +86,41 @@
                 android:layout_height="50dp"
                 app:tint="@color/white" />
 
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    app:cardCornerRadius="13dp"
+    android:layout_margin="2dp"
+    android:layout_gravity="center"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/cardChat"
+            android:layout_width="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/chat_white"
+            android:layout_height="15dp"
+            app:tint="@color/colorPrimary" />
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/cardChat"
-                android:visibility="gone"
-                android:layout_width="50dp"
-                android:layout_gravity="center"
-                android:padding="14dp"
-                android:src="@drawable/chat_white"
-                android:layout_height="50dp"
-                app:tint="@color/white" />
+</androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 app:cardCornerRadius="13dp"
                 android:layout_margin="2dp"
+                android:layout_gravity="center"
                 android:id="@+id/cardPatientJoin"
-                app:cardBackgroundColor="@color/colorPrimary"
                 android:layout_height="wrap_content">
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="horizontal"
@@ -111,17 +129,21 @@
                     android:layout_height="wrap_content">
                     <ImageView
                         android:layout_width="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:layout_gravity="center_vertical"
 
                         android:src="@drawable/call_answer"
                         android:layout_height="15dp"
-                        app:tint="@android:color/white" />
+                        app:tint="@color/colorPrimary" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="JOIN"
+                    android:visibility="gone"
                     android:paddingRight="15dp"
                     android:paddingLeft="05dp"
                     android:layout_gravity="center"
