--- a/app/src/main/res/layout/fragment_doctors_profile.xml
+++ b/app/src/main/res/layout/fragment_doctors_profile.xml
@@ -17,14 +17,29 @@
         android:layout_alignParentBottom="false"
 
         android:layout_height="50dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:text="Book Appointment"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:layout_height="match_parent"/>
+
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Book Appointment"
+                android:layout_gravity="center"
+                android:gravity="center"
+
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:layout_height="match_parent"/>
+            <ImageView
+                android:layout_width="20dp"
+                android:padding="3dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/right_white"
+                android:layout_height="20dp"/>
+        </LinearLayout>
+
 
 
 
