--- a/app/src/main/res/layout/fragment_prescription_upload.xml
+++ b/app/src/main/res/layout/fragment_prescription_upload.xml
@@ -25,6 +25,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="10dp"
+        android:id="@+id/cardUpload"
         app:cardBackgroundColor="@color/colorPrimary"
         android:layout_height="wrap_content">
         <TextView
