--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:padding="10dp">
 
         <ImageView
@@ -186,7 +187,8 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/piggy_bank" />
+            android:tint="@color/colorPrimary"
+            android:src="@drawable/prescription" />
 
         <TextView
             android:layout_width="match_parent"
