--- a/app/src/main/res/layout/activity_cart_list.xml
+++ b/app/src/main/res/layout/activity_cart_list.xml
@@ -11,30 +11,45 @@
         android:layout_width="match_parent"
         android:id="@+id/appbar"
         android:layout_height="60dp">
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:onClick="back"
-                android:padding="21dp"
-                android:src="@drawable/left_white_" />
-
-            <TextView
-                android:id="@+id/tv_name"
+            android:layout_height="match_parent">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:onClick="back"
+                    android:padding="21dp"
+                    android:src="@drawable/left_white_" />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
 
 
-                android:text="Cart"
-                android:textColor="@android:color/white"
-                android:textSize="18dp" />
-        </LinearLayout>
+                    android:text="Cart"
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp" />
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Total : RS 300 "
+                android:id="@+id/cartTotalPrice"
+
+                android:layout_marginRight="10dp"
+                android:textColor="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
