--- a/app/src/main/res/layout/activity_product_body_detail.xml
+++ b/app/src/main/res/layout/activity_product_body_detail.xml
@@ -10,62 +10,114 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="60dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginRight="10dp"
+
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="60dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:onClick="back"
+                        android:padding="21dp"
+                        android:src="@drawable/left_white_" />
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:text="@string/app_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+
+                        android:layout_gravity="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp" />
+                </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="60dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:src="@drawable/cart"
+                        app:tint="@android:color/white"
+                        android:onClick="openCart"
+
+                        android:layout_alignParentRight="true"
+                        android:padding="19dp"
+                        android:layout_height="60dp"/>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="16dp"
+                        android:visibility="visible"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@color/white"
+                        android:layout_height="16dp"/>
+                    <TextView
+                        android:text="0"
+
+
+                        android:textSize="10dp"
+                        android:id="@+id/tv_count"
+                        android:layout_width="16dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:layout_alignParentRight="true"
+
+                        android:textColor="@color/colorPrimary"
+                        android:layout_height="16dp"/>
+
+                </RelativeLayout>
+            </RelativeLayout>
+
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:onClick="back"
-                android:padding="21dp"
-                android:src="@drawable/left_white_" />
-
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:background="@drawable/shadow_log_only_bottom"
+            android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/tv_name"
-                android:text="@string/app_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/category"
+                android:text="Main Category"
+                android:layout_gravity="center_vertical"
 
+                android:textColor="#3F51B5"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:layout_width="12dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/right_white"
+                android:layout_height="12dp"
+                app:tint="#cccccc" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/subcategory"
+                android:text="Sub  Category"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
 
-                android:layout_gravity="center"
-                android:textColor="@android:color/white"
-                android:textSize="18dp" />
+                android:textColor="#3F51B5"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        android:background="@drawable/shadow_log_only_bottom"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@+id/category"
-            android:text="Main Category"
-            android:layout_gravity="center_vertical"
 
-            android:textColor="#3F51B5"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_width="12dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/right_white"
-            android:layout_height="12dp"
-            app:tint="#cccccc" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@+id/subcategory"
-            android:text="Sub  Category"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-
-            android:textColor="#3F51B5"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
