--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -29,15 +29,44 @@
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:layout_height="wrap_content"/>
-            <ImageView
+            <RelativeLayout
                 android:layout_width="60dp"
-                android:src="@drawable/cart"
-                app:tint="@android:color/white"
-                android:onClick="openCart"
-
                 android:layout_alignParentRight="true"
-                android:padding="20dp"
-                android:layout_height="60dp"/>
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="60dp"
+                    android:src="@drawable/cart"
+                    app:tint="@android:color/white"
+                    android:onClick="openCart"
+
+                    android:layout_alignParentRight="true"
+                    android:padding="19dp"
+                    android:layout_height="60dp"/>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="16dp"
+                    android:visibility="visible"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@color/white"
+                    android:layout_height="16dp"/>
+                <TextView
+                    android:text="0"
+
+
+                    android:textSize="10dp"
+                    android:id="@+id/tv_count"
+                    android:layout_width="16dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:layout_alignParentRight="true"
+
+                    android:textColor="@color/colorPrimary"
+                    android:layout_height="16dp"/>
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
