--- a/app/src/main/res/layout/activity_booking_appointment.xml
+++ b/app/src/main/res/layout/activity_booking_appointment.xml
@@ -150,8 +150,22 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/cardMedicalHistory"
+                android:layout_margin="@dimen/dimen_card_isolation_main"
+                app:cardCornerRadius="0dp">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:id="@+id/recycler2"
+                    android:layout_height="wrap_content"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_margin="@dimen/dimen_card_isolation_main"
                 app:cardCornerRadius="0dp"
+                android:id="@+id/cardMedicalGuest"
                 android:visibility="gone"
                 android:layout_height="wrap_content">
                 <LinearLayout
