--- a/app/src/main/res/layout/activity_urgent_care_request.xml
+++ b/app/src/main/res/layout/activity_urgent_care_request.xml
@@ -155,33 +155,47 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/dimen_card_isolation_main"
-            app:cardCornerRadius="@dimen/dimen_card_radious"
-            android:visibility="gone"
-            android:layout_height="wrap_content">
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:padding="15dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginTop="0dp"
-                    android:text="Medical History" />
+                android:layout_height="wrap_content"
+                android:id="@+id/cardMedicalHistory"
+                android:layout_margin="@dimen/dimen_card_isolation_main"
+                app:cardCornerRadius="0dp">
+
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
+                    android:id="@+id/recycler2"
+                    android:layout_height="wrap_content"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/dimen_card_isolation_main"
+                app:cardCornerRadius="0dp"
+                android:id="@+id/cardMedicalGuest"
+                android:visibility="gone"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:padding="15dp"
                     android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginTop="0dp"
+                        android:text="Medical History" />
 
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-        </androidx.cardview.widget.CardView>
+                    </androidx.recyclerview.widget.RecyclerView>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_marginTop="10dp"
