--- a/app/src/main/res/layout/appointment_item.xml
+++ b/app/src/main/res/layout/appointment_item.xml
@@ -52,6 +52,7 @@
                     android:lines="1"
                     android:id="@+id/tv_date"
                     android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
         </LinearLayout>
@@ -63,42 +64,141 @@
             android:layout_alignParentRight="true"
             android:layout_height="wrap_content">
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:id="@+id/cardVcall"
-                    android:padding="17dp"
-                    android:visibility="gone"
+            <ImageView
+                android:layout_width="50dp"
+                android:id="@+id/cardVcall"
+                android:padding="17dp"
+                android:visibility="gone"
 
-                    android:layout_gravity="center"
-                    android:src="@drawable/video_camera"
-                    android:layout_height="50dp"
-                    app:tint="@color/white" />
-
-
-                <ImageView
-                    android:id="@+id/cardAcall"
-                    android:visibility="gone"
-                    android:layout_width="50dp"
-                    android:padding="17dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/call_answer"
-                    android:layout_height="50dp"
-                    app:tint="@color/white" />
+                android:layout_gravity="center"
+                android:src="@drawable/video_camera"
+                android:layout_height="50dp"
+                app:tint="@color/white" />
 
 
-                <ImageView
-                    android:id="@+id/cardChat"
-                    android:visibility="gone"
-                    android:layout_width="50dp"
-                    android:layout_gravity="center"
-                    android:padding="14dp"
-                    android:src="@drawable/chat_white"
-                    android:layout_height="50dp"
-                    app:tint="@color/white" />
+            <ImageView
+                android:id="@+id/cardAcall"
+                android:visibility="gone"
+                android:layout_width="50dp"
+                android:padding="17dp"
+                android:layout_gravity="center"
+                android:src="@drawable/call_answer"
+                android:layout_height="50dp"
+                app:tint="@color/white" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                app:cardCornerRadius="13dp"
+                android:layout_margin="2dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/cardChat"
+                        android:layout_width="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/chat_white"
+                        android:layout_height="15dp"
+                        app:tint="@color/colorPrimary" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                app:cardCornerRadius="13dp"
+                android:layout_margin="2dp"
+                android:layout_gravity="center"
+                android:id="@+id/cardPatientJoin"
+                android:layout_height="wrap_content">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center_vertical"
+
+                        android:src="@drawable/call_answer"
+                        android:layout_height="15dp"
+                        app:tint="@color/colorPrimary" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="JOIN"
+                        android:visibility="gone"
+                        android:paddingRight="15dp"
+                        android:paddingLeft="05dp"
+                        android:layout_gravity="center"
+                        android:textColor="@android:color/white"
+                        android:layout_height="wrap_content">
+
+                    </TextView>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                app:cardCornerRadius="13dp"
+                android:layout_margin="2dp"
+                android:layout_gravity="center"
+                android:id="@+id/cardPatientViewProfile"
+                android:layout_height="wrap_content">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center_vertical"
+
+                        android:src="@drawable/right_white"
+                        android:layout_height="15dp"
+                        app:tint="@color/colorPrimary" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="JOIN"
+                        android:visibility="gone"
+                        android:paddingRight="15dp"
+                        android:paddingLeft="05dp"
+                        android:layout_gravity="center"
+                        android:textColor="@android:color/white"
+                        android:layout_height="wrap_content">
+
+                    </TextView>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
             <ImageView
                 android:layout_width="50dp"
                 android:id="@+id/cardMore"
                 android:padding="17dp"
+                android:visibility="gone"
 
                 android:layout_gravity="center"
                 android:src="@drawable/right_white"
