some ui changed

--- a/app/src/main/res/layout/dr_item_blk_grad.xml
+++ b/app/src/main/res/layout/dr_item_blk_grad.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp">
 
     <RelativeLayout
@@ -31,23 +32,29 @@
                 android:layout_height="wrap_content"
                 android:text="Dr Name"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/tv_dept"
+                android:paddingLeft="00dp"
+                android:paddingRight="00dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Department"
                 android:textColor="@color/white"
-                android:textSize="12dp"
+                android:textSize="10dp"
                 android:textStyle="bold" />
+
+
 
             <TextView
                 android:id="@+id/tv_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="10dp" />
 
