--- a/app/src/main/res/layout/fragment_phon_verification_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_phon_verification_bottom_sheet.xml
@@ -46,6 +46,14 @@
 
 
         </LinearLayout>
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:ccp_showFullName="true"
+            app:ccp_showPhoneCode="false"
+            app:ccp_showNameCode="false"/>
 
 
         <androidx.cardview.widget.CardView
