--- a/app/src/main/res/layout/activity_all_specialist.xml
+++ b/app/src/main/res/layout/activity_all_specialist.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:id="@+id/appbar"
 
-        android:layout_height="90dp">
+        android:layout_height="120dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -40,6 +40,10 @@
                 <Spinner
                     android:layout_width="wrap_content"
                     android:id="@+id/spinnerHospital"
+                    android:layout_height="wrap_content"/>
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:id="@+id/spinnergender"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
