--- a/app/src/main/res/layout/activity_all_urgent_doctors.xml
+++ b/app/src/main/res/layout/activity_all_urgent_doctors.xml
@@ -40,6 +40,10 @@
                     android:layout_width="wrap_content"
                     android:id="@+id/spinnerHospital"
                     android:layout_height="wrap_content"/>
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:id="@+id/spinnergender"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
