--- a/app/src/main/res/layout/activity_g_p_search.xml
+++ b/app/src/main/res/layout/activity_g_p_search.xml
@@ -10,8 +10,9 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:id="@+id/appbar"
+        android:elevation="10dp"
 
-        android:layout_height="90dp">
+        android:layout_height="120dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -41,6 +42,10 @@
                 <Spinner
                     android:layout_width="wrap_content"
                     android:id="@+id/spinnerHospital"
+                    android:layout_height="wrap_content"/>
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:id="@+id/spinnergender"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
