--- a/app/src/main/res/layout/activity_patient_personal_info.xml
+++ b/app/src/main/res/layout/activity_patient_personal_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.call_gp_now.Activity.PatientPersonalInfoActivity">
+    tools:context=".Activity.PatientPersonalInfoActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
-                android:text="Personal Info"
+                android:text="Personal Details"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
@@ -63,8 +63,8 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp" />
             <TextView
