--- a/app/src/main/res/layout/appointment_item.xml
+++ b/app/src/main/res/layout/appointment_item.xml
@@ -90,6 +90,7 @@
                 android:layout_width="wrap_content"
                 app:cardCornerRadius="13dp"
                 android:layout_margin="2dp"
+                android:id="@+id/cardChatCard"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content">
                 <LinearLayout
