--- a/app/src/main/res/layout/fragment_phon_verification_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_phon_verification_bottom_sheet.xml
@@ -17,7 +17,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="vertical">
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:ccp_showFullName="true"
+            app:ccp_showPhoneCode="false"
+            app:ccp_showNameCode="false"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -27,6 +34,7 @@
 
                 <Spinner
                     android:layout_width="70dp"
+                    android:visibility="gone"
                     android:layout_height="50dp"
                     android:background="@drawable/rect_curved_trans_gray"
                     android:layout_centerInParent="true"
@@ -46,14 +54,7 @@
 
 
         </LinearLayout>
-        <com.hbb20.CountryCodePicker
-            android:id="@+id/ccp"
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:ccp_showFullName="true"
-            app:ccp_showPhoneCode="false"
-            app:ccp_showNameCode="false"/>
 
 
         <androidx.cardview.widget.CardView
@@ -91,7 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="30dp"
-            android:hint="Enter OTP Here"
+            android:hint="Enter verification code here"
             android:padding="10dp">
 
         </EditText>
